fix: Update theme UI for Dark mode

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -145,3 +145,14 @@ div[data-language="python"] span.code-definition {
         box-shadow: 0 0 0 0 rgba(7, 120, 231, 0);
     }
 }
+
+/* daisyUI */
+
+input.input-bordered {
+    background-color: white;
+}
+
+input:focus {
+    outline: none;
+    border: none;
+}
